test/fixtures/type-error/scope-failure.ro
fun isComplex(number: i32): boolean =
  number match {
    case x is Real(_) -> false
    case 2 -> false
    else -> false
  }